@startuml

    namespace edu.kit.iti.formal.stvs.view {

        class STVSMainScene {
            +STVSMainScene(root:Parent)
        }

        class STVSRootController {
            -types: ObservableList<Type>
            -sortedTyes: SortedList<Type>
            -ioVars: ObservableList<IOVariable>
            -code: Code
            -typeComparator: Comparator<Type>
            +getCode(): Code
        }

        class STVSRootView {
            -menuBar: STVSMenuBar
            -editor: EditorPane
            -specifications: SpecificationsPane
            +getMenuBar(): STVSMenuBar
            +getEditor(): EditorPane
            +getSpecifications(): SpecificationsPane
            +setMenuBar(menuBar:STVSMenuBar): void
            +setEditor(editor:EditorPane): void
            +setSpecifications(specifications:SpecificationsPane): void
        }

        interface Controller {
            {abstract} +getView(): Node
        }

        class javafx.scene.Scene
        javafx.scene.Scene <|-- STVSMainScene

        Controller <|.. STVSRootController

        class javafx.scene.layout.Pane
        javafx.scene.layout.Pane <|-- STVSRootView

        STVSMainScene --> STVSRootController: rootController

        STVSRootController --> STVSRootView: view

    }

@enduml
